--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ matrix:
     - rvm: rbx-19mode
     - rvm: jruby-head
 script: "gem build liquid.gemspec && gem install liquid-3.0.0.gem"
+script: "rake test"
 notifications:
   disable: true
